# ChangeLog for kde-base/kdm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdm/ChangeLog,v 1.133 2008/05/15 12:37:59 corsair Exp $

  15 May 2008; Markus Rothe <corsair@gentoo.org> kdm-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  13 May 2008; Jeroen Roovers <jer@gentoo.org> kdm-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> kdm-3.5.9.ebuild:
  Marking kdm-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kdm-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

*kdm-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org> +kdm-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/kdebase-4.0.1-pam-optional.patch, -kdm-4.0.1.ebuild:
  Old.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/kdebase-4.0.1-pam-optional.patch, -kdm-4.0.1.ebuild:
  Old.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/kdebase-4.0.1-pam-optional.patch, -kdm-4.0.1.ebuild:
  Old.

*kdm-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kdebase-4.0.2-pam-optional.patch, +kdm-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> kdm-3.5.8-r1.ebuild,
  kdm-3.5.9.ebuild, kdm-4.0.1.ebuild:
  Keyword split KDE for HPPA.

*kdm-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/kdm-3.5.9-respect-cflags.patch, +kdm-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  17 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  -files/kdm-3.5.5-grub-patch.diff, -files/kdm-3.5.7-login.diff,
  -files/kdm-4.0.0-genkdmconf.patch,
  -files/kdebase-4.0.0-pam-optional.patch, -kdm-3.5.5-r1.ebuild,