@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST kdeutils-3.5.8.tar.bz2 3059172 RMD160 94267b9c08339c7310d65106110c9b9ef133d6f8 SHA1 55aac5ecb90ee8a9854603eb2415adb2da6f249c SHA256 7dcbe3361cc53f9dac4c1bf6f45952d3d2518bec56cd8c07b8e07b4c4f12d0ac
 DIST kdeutils-3.5.9.tar.bz2 3060841 RMD160 ac98dce89f31469de8b582328fa2a0f10e835d01 SHA1 143c1284e4e4f3c985af1e156652e415f566ba17 SHA256 65df88b026720b8e11446c9a0a5d8cd942d236097e9c6ca63607fab04884b5ff
 DIST kdeutils-4.0.2.tar.bz2 2354199 RMD160 7b85a496938f7400e4c4ba3f84d4d4e459ebbbab SHA1 d2ab8fbb7a8ed4db7ab3a04abd55282fb30e7dca SHA256 5f5d6dcf6f91428c2af5316bc30b36b03f26451e627597ff64e49183bcbeb311
 DIST kdeutils-4.0.3.tar.bz2 2357114 RMD160 302ef65b043a6e7d82f73c2b51c561b64cbdd9ef SHA1 21e2e92373c47f84edffff763b6ca33b23e60bec SHA256 3eeb81b494edf8a540b66ec268a53eb4f4d3387e5c10e1064928de50fb133181
+DIST kdeutils-4.0.4.tar.bz2 2357936 RMD160 c5ecc80d7d8fdcbe357508ddf1bae5e698967f45 SHA1 fe73863924809c8ecb4f5c6b10492994f25c9035 SHA256 a110bca76fdc58c138228584081e3558e87d133f921cca2defd332c2bae13899
 EBUILD kfloppy-3.5.8.ebuild 474 RMD160 9d20f2d83f2788a8c706e90ead020bcdf16611e3 SHA1 8dda73ff0c48a3082200da33b3efea5f05c5c5ea SHA256 7b6284b14abef6cd88bf51b73577f30da3e3b6a0fadc03cb824d94c3168ddda2
 EBUILD kfloppy-3.5.9.ebuild 446 RMD160 ea1b68233dc400532aaa9f537849029add82ce1c SHA1 c6903a212fa7747ad54fcfa2cebc64ec049235f1 SHA256 213fc92c7c9bb7772f818205c3a77326b6f8da352112125a22fcf1484e722c17
 EBUILD kfloppy-4.0.2.ebuild 401 RMD160 06bb14a0662ac6d305374677f81e82013790215b SHA1 8ecc2333cac82bd8e8babc9ec4f452f1832975c0 SHA256 db126787d4982c89b0a7f591d8fd4a6749844cafed97a53b8d7ccf58ddd78bfa
 EBUILD kfloppy-4.0.3.ebuild 401 RMD160 24c6a045dbadc60e287e7eeecc72ddcdc3d4fe76 SHA1 0e80e83f9343dcd1330a8eda94adb4821636a29b SHA256 6eaa2a0743501db140e1277b4810f01972cf6a9098d8784c622b8a2e34093a38
-MISC ChangeLog 9772 RMD160 29ef684ebc931b96f0bf9cce61ff899f5c8fe8ca SHA1 8197114c0cfbe9d41dfb04f68f4a30a25404de69 SHA256 2d0532dfc1b10ce9591d541bd5dad360cf69d3ee8d91198f4275dab76eb8f004
+EBUILD kfloppy-4.0.4.ebuild 397 RMD160 851db55ece87520d5661dfff1e95a7a94b6b2606 SHA1 0726ad23800cd6654f6119af4cb74fd7fa8e15ce SHA256 475fa7772d5e1157202ccac076647e091bc4c608a5442ace0ac1f95d7f8e826e
+MISC ChangeLog 9953 RMD160 13f80d1a32b277cb2342f086a48fe8bf53e169a7 SHA1 9085d413d50faac1ca0c086e03dd11de22f948ca SHA256 cf886041f029dfdfcdeece31a8ba22b081ad623f51b237f170e213bd901342a4
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgsyHYACgkQB18eXLOpYdleHACgrBu5mcX4blGPfTmLmXAh3/uD
+kpIAn0b8HPhw2J6bzuFfxlGWQhpu8+yd
+=YfRc
+-----END PGP SIGNATURE-----
