@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdm/ChangeLog,v 1.133 2008/05/15 12:37:59 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdm/ChangeLog,v 1.134 2008/05/15 23:30:33 ingmar Exp $
+
+*kdm-4.0.4 (15 May 2008)
+
+  15 May 2008; Ingmar Vanhassel <ingmar@gentoo.org> +kdm-4.0.4.ebuild:
+  Added KDE 4.0.4 version of kdm. Thanks to Jorge Manuel B. S. Vicetto.
 
   15 May 2008; Markus Rothe <corsair@gentoo.org> kdm-3.5.9.ebuild:
   Stable on ppc64; bug #221063
